public/css/style.css
body {
    font-family: 'Heebo';
    background-color: #FBF8F4;
}
nav {
    background: #FBF8F4;
    top: 0;
    width: 100%;
    transition: all 0.5s;
    position: relative;
    z-index: 1;
    padding: 20px 20px;
}
nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    justify-content: space-around
}
nav li {
    flex: 1;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}
nav a {
    color: black;
    text-decoration: none;
}
a:hover {
    color: black;
    text-decoration: none;
}
.logo {
    font-weight: 800;
}
.istyle {

    background-image: -webkit-linear-gradient(#e83557 50%, black 50%);
    background-repeat: repeat;
    /* background-position: 0 0; */
    background-size: 100% 50px;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    -webkit-animation: welcome 3s linear infinite;
    animation: welcome 3s linear linear infinite;

}
@-webkit-keyframes welcome {
    100% {
      background-position: 0 -50px;
    }
  }
  
  @keyframes welcome {
    100% {
      background-position: 0 -50px;
    }
  }
.me{
    font-size:18px;
    color: black;
}
.card-header {
    background-color: #FBF8F4;
}
#container {
    margin-left:none;
}
#inner-acc {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
#icon-align{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    justify-content: space-between;
    letter-spacing: 0.5px;
}
#card-body {
    max-width: auto;
    background-color: #FBF8F4;
}
.istyle {
    font-size: 18px; 
    color:black;
}
.lead-container{
    display: flex;
    height: 800px;
    box-shadow: inset 0 0 0 1000px rgba(#FBF8F4,.2)
}
@media (max-width: 600px) {
    .lead-container {
        display: flex;
        width: 100%;
        height: 400px;
        font-size: 15px;
    }
  }
#map {

    width: 100%;
    height: 800px;
 
}
@media (max-width: 600px) {
    #map {
        display: flex;
        width: 100%;
        height: 400px;
    }
}
.lead-item {
    flex: 1;
    /* text-align: center; */
    display: flex;
    justify-content: center;
    align-items: center;
}
#hometown {
    background-image: url('../images/HometownMap.png');
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    font-size: 30px;
    color: white;
    text-shadow: 2px 2px #e83557;

}
#lead-text {
    font-size: 20px;
    color: black;
}

.current {
    display: flex;
    float: left;
    height: 400px;
    background-image: url('https://cdn0.iconfinder.com/data/icons/hand-conversation/91/Hand_17-512.png');
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: center;
    z-index: -3;
}
.ev {
    display: flex;
    float: left;
    height: 400px;
    background-image: url('https://eurodonovan.files.wordpress.com/2014/12/everton-crest.png');
    background-size: 40%;
    background-repeat: no-repeat;
    background-position: center;
}
.app {
    font-size: 0.5em;
    text-shadow: 1px 1px 1px white, 2px 2px 3px #e83557;
    /* #73f9d9 */
}
#apptitle {
    font-family: 'Maven Pro', sans-serif;
    font-size: 1.5em;
    text-transform: uppercase;
    font-weight: bold;
}
#evtitle {
    font-family: 'Maven Pro', sans-serif;
    font-size: 1.5em;
    text-transform: uppercase;
    font-weight: bold;
}
.button-container {
    display: flex;
    justify-content: center;

}
.project-link {
    display: inline-block;
    border: 1px solid black;
    width: auto;
}
#acc-butn {
    color: black;
    text-decoration: none;
    font-size: 20px;
}
#acc-butn:hover{
    color: #FBF8F4;
}
.card-header:hover{
    color: #FBF8F4;
    background-color: black;
}
#acc-butn:active {
    text-decoration: none;
    color:black;
}
#acc-butn:visited {
    text-decoration: none;
    color:black;
}
.title {
    width: 25%;
    background-color: black;
    z-index: 2;
}

